styles.css
/* Link styles */
a {
  color: #fff;
  text-decoration: underline;
}

a:hover {
  text-decoration: none;
}

a:visited {
  text-decoration: dashed;
}

a:active {
  text-decoration: none;
}

/* HTML styling */
html {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  font-family: 'Audiowide', sans-serif;
  background-color: #050505;
  color: #fff;
}

/* navbar styling */
.logo {
  position: fixed;
  top: 0;
  left: 0;
  height: 50px;
  z-index: 1000;
}

.tabs {
  position: fixed;
  top: 0;
  right: 0;
  height: 50px;
  display: flex;
  gap: 10px;
  z-index: 1000;
  transition: right 0.3s ease-in-out;
  cursor: pointer;
}

/* Panel styling */
.panel {
  position: fixed;
  top: 0;
  right: -300px;
  width: 250px;
  height: 100%;
  background-color: #050505ec;
  border-left: 2px solid #fff;
  overflow-y: auto;
  transition: right 0.3s ease-in-out;
  z-index: 999;
}

.panel ul {
  padding: 10px;
  list-style: none;
}

.panel ul li a {
  text-decoration: none;
  border: 2px solid #fff;
  border-radius: 10px;
  padding: 5px 30px;
  margin: -14px 0 24px 0;
  display: block;
}

/* Header styling */
.header-image {
  position: sticky;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 250px;
}

.header-image::after {
  content: '';
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(to bottom, #05050500, #050505ff);
}

/* body styling */

body {
  margin: 0;
  padding: 0;
}

.container {
  max-width: calc(100vh * (16 / 9)); /* Matches the height-based aspect ratio */
  margin: 0 auto; /* Centers the content */
  padding: 2.5rem; /* Optional padding for better spacing */
}

.txt-header-container{
  display: flex;
  justify-content: center;
}

.txt-header-bubble
{
  display: inline-block;
  text-align: center;
  border: 2px solid #fff;
  border-radius: 10px;
  padding: 5px 30px;
  margin: 20px 10px;
}

.body-bubble {
  border: 2px solid #fff;
  border-radius: 10px;
  padding: 5px 30px;
  margin: 0px 10px;
}

.body-bubble p {
  font-size: 20px;
  text-align: left;
}

/* Footer styling */
.site-footer {
  border: 2px solid #fff;
  border-radius: 10px;
  text-align: center;
  padding: 1rem;
  padding: 5px 30px;
  margin: 20px 10px;
  bottom: 0;
}

.site-footer a.footer-link {
  margin: 5px;
}

.site-footer a.footer-link:hover {
  text-decoration: underline;
}

